--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body, html {
   left: 0;
   width: 200%;
   height: 200%;
-  background: url('https://i.imgur.com/7QlM6kN.png') repeat;
+  background: url('https://imgur.com/gallery/dark-forest-SxqnbKt') repeat;
   opacity: 0.1;
   animation: fogMove 20s linear infinite;
   z-index: 1;
